force-app/main/default/objects/Program_Detail__c/Program_Detail__c.object-meta.xml
<CustomObject>
    <label>Program Detail</label>
    <nameField>
        <label>Program Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>