force-app/main/default/objects/Program_Detail__c/fields/Invitation__c.field-meta.xml
<CustomField>
    <fullName>Invitation__c</fullName>
    <label>Invitation</label>
    <referenceTo>Invitation__c</referenceTo>
    <relationshipLabel>Program Details</relationshipLabel>
    <relationshipName>Program_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>