force-app/main/default/objects/Program_Detail__c/fields/Program_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Date__c</fullName>
    <label>Program Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>